Bugfixing squish issue

--- a/tilegame/css/control-panel.css
+++ b/tilegame/css/control-panel.css
@@ -67,7 +67,7 @@
 }
 
 .customiser-button {
-  width: 25px;
+  width: 50px;
   aspect-ratio: 1;
   padding: 0;
   margin-top: 5px;
